--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<div class="page">
+  <div class="code-box">
+    <markdown
+      [src]="'assets/markdown/readme.md'"
+      (error)="onError($event)"
+    ></markdown>
+  </div>
+
+  <ngx-live2d
+    [position]="position()"
+    [configuration]="configuration()"
+    (modelClick)="modelClickRun()"
+  />
+</div>
