--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,45 @@
+@font-face {
+  font-family: "Quicksand";
+  src: url("assets/fonts/Quicksand-Regular.ttf");
+}
 
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  background: #282c34;
+  color: #fff;
+  font-family: "Quicksand", sans-serif;
+  margin: 0;
+}
+
+/* 设置滚动条的宽度和高度 */
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+/* 设置滚动条轨道的颜色和背景 */
+::-webkit-scrollbar-track {
+  background-color: #ccc;
+}
+
+/* 设置滚动条滑块的颜色和背景 */
+::-webkit-scrollbar-thumb {
+  background-color: #282c34;
+}
+
+a {
+  color: #81c995;
+}
+
+table {
+  border: 1px solid #858792;
+  border-collapse: collapse;
+}
+
+table td,
+table th {
+  border: 1px solid #858792;
+  border-collapse: collapse;
+  padding: 8px;
+}
